--- a/booksmith_proj/templates/accounts/signup.html
+++ b/booksmith_proj/templates/accounts/signup.html
@@ -11,9 +11,10 @@
 </head>
 <body>
     <h2 style="padding: 25px; font-size: 60px; font-family: Arial, sans-serif; margin-left: 100px;">BookSmith</h2>
-    {% csrf_token %}
+   
     
-    <form class="registration-form">
+    <form class="registration-form" method="post">
+        {% csrf_token %}
         <h4 class="section">Personal Information</h4>
         <hr>
 
@@ -43,7 +44,7 @@
             <input type="password" id="pass2" name="pass2" placeholder="Confirm Password" required>
         </div>
         <h4 class="section">Already have account?<a style="margin-left: 20px ;"href="#">Login</a></h4>
-        <button submit="submit" class="register-btn">Register</button>
+        <button type="submit" class="register-btn">Register</button>
     </form>
     <script type="text/javascript" src="{% static 'js_files/signup.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
