ContactUs Initial Commit UI

--- a/booksmith_proj/templates/aboutus.html
+++ b/booksmith_proj/templates/aboutus.html
@@ -10,7 +10,7 @@
 <body>
     <h2 style="justify-content: right; text-align: right; padding: 30px; margin-right: 170px; font-size: 35px;margin-top: 60px;">About Us</h2>
     <h2 style="padding: 10px; font-size: 60px; font-family: Arial, sans-serif; justify-content: center; text-align: center;">BookSmith</h2>
-    <h3 style="padding: 15px; justify-content: center; text-align: center; color: lightgrey;">"Forging Stories One Page at a Time"</h3>
+    <h3 style="padding: 15px; justify-content: center; text-align: center; color: rgb(145, 145, 145);">"Forging Stories One Page at a Time"</h3>
     <div class="description">
         <p>Welcome to BookSmith, your go-to destination for free online reading!</p>
         <br>
