--- a/booksmith_proj/templates/contactus.html
+++ b/booksmith_proj/templates/contactus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Contact Us</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css_files/contactus.css' %}">
 </head>
