--- a/booksmith_proj/templates/accounts/signup.html
+++ b/booksmith_proj/templates/accounts/signup.html
@@ -1,3 +1,6 @@
+{% extends 'accounts/base.html' %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,12 +29,28 @@
             <input type="password" id="pass2" name="pass2" placeholder="Confirm Password" required>
         </div>
         <div class="section">
-            <h4 style="margin-left: 30px;">Already have account?<a style="margin-left: 10px ;"href="#">Login</a></h4>
+            <h4 style="margin-left: 30px;">Already have account?<a style="margin-left: 10px ;"href="{% url 'signin' %}">Login</a></h4>
             <button type="submit" class="register-btn">Register</button>
         </div>
     </form>
     <script type="text/javascript" src="{% static 'js_files/signup.js' %}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script>
+        {% if messages %}
+        {% for message in messages %}
+            Swal.fire({
+                icon: '{% if message.tags == "success" %}success{% elif message.tags == "error" %}error{% else %}info{% endif %}',
+                title: '{{ message }}',
+                showConfirmButton: true,
+                timer: 3000
+            }).then(() => {
+                {% if message.tags == "success" %}
+                    window.location.href = "{% url 'signin' %}";
+                {% elif message.tags == "error" %}
+                {% endif %}
+            });
+        {% endfor %}
+    {% endif %}
+    </script>
 </body>
 </html>
+{% endblock %}
