--- a/booksmith_proj/static/css_files/base.css
+++ b/booksmith_proj/static/css_files/base.css
@@ -160,3 +160,8 @@
   font-weight: bold;
   padding: 12px 20px;
 }
+
+.container {
+  width: 100%; /* Ensure it takes full width */
+  margin: auto; /* Center the container */
+}
