--- a/booksmith_proj/templates/base.html
+++ b/booksmith_proj/templates/base.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}My Website{% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css_files/base.css' %}" />
+    {% block extra_css %}{% endblock %}
   </head>
   <body>
     <header class="navbar-container">
@@ -40,15 +41,12 @@
       </div>
     </header>
 
-    <!-- Placeholder for content injected by child templates -->
-    <div class="container">
-      {% block content %}
-      <!-- Content from child templates will go here -->
-      {% endblock %}
-    </div>
+    <div class="container">{% block content %}{% endblock %}</div>
 
-    <footer>
+    <!-- <footer>
       <p>Footer content</p>
-    </footer>
+    </footer> -->
+
+    {% block extra_js %}{% endblock %}
   </body>
 </html>
