--- a/booksmith_proj/static/css_files/signin.css
+++ b/booksmith_proj/static/css_files/signin.css
@@ -4,10 +4,13 @@
   width: 100%;
   height: 100vh;
 }
+.container-log-in hr{
+  height: 630px;
+}
 
 .left-side {
   flex: 1;
-  background-color: #e0e0e0;
+  background-color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
