--- a/booksmith_proj/templates/accounts/signup.html
+++ b/booksmith_proj/templates/accounts/signup.html
@@ -1,82 +1,127 @@
-{% extends 'base.html' %} {% load static %} {% block title %}Sign Up
-{%endblock%} {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css_files/signup.css' %}" />
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
-/>
-{% endblock %} {% block content %}
-<h2
-  style="
-    padding: 25px;
-    font-size: 60px;
-    font-family: Arial, sans-serif;
-    justify-content: center;
-    text-align: center;
-    margin-top: 30px;
-  "
->
-  BookSmith
-</h2>
+{% extends 'base.html' %}
+{% load static %}
 
-<form class="registration-form" method="post">
-  {% csrf_token %}
-  <div class="form-group">
-    <input
-      type="text"
-      id="username"
-      name="username"
-      placeholder="Username"
-      required
-    />
-    <input type="email" id="email" name="email" placeholder="Email" required />
-  </div>
-  <br />
-  <div class="form-group">
-    <input
-      type="password"
-      id="pass1"
-      name="pass1"
-      placeholder="Password"
-      required
-    />
-    <input
-      type="password"
-      id="pass2"
-      name="pass2"
-      placeholder="Confirm Password"
-      required
-    />
-  </div>
-  <div class="section">
-    <h4 style="margin-left: 30px">
-      Already have an account?<a
-        style="margin-left: 10px"
-        href="{% url 'signin' %}"
-        >Login</a
-      >
-    </h4>
-    <button type="submit" class="register-btn">Register</button>
-  </div>
-</form>
+{% block title %}Sign Up{% endblock %}
 
-{% endblock %} {% block extra_js %}
-<script type="text/javascript" src="{% static 'js_files/signup.js' %}"></script>
-<script>
-  {% if messages %}
-  {% for message in messages %}
-      Swal.fire({
-          icon: '{% if message.tags == "success" %}success{% elif message.tags == "error" %}error{% else %}info{% endif %}',
-          title: '{{ message }}',
-          showConfirmButton: true,
-          timer: 3000
-      }).then(() => {
-          {% if message.tags == "success" %}
+{% block extra_css %}
+  <link rel="stylesheet" href="{% static 'css_files/signup.css' %}" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
+{% endblock %}
+
+{% block content %}
+<div class="whole-body">
+  <div class="left-side">
+    <h2
+      style="
+        padding: 25px;
+        font-size: 50px;
+        font-family: Arial, sans-serif;
+        text-align: left;
+        margin-top: 30px;
+        margin-left: 170px;
+      "
+    >
+      Sign In
+    </h2>
+    <p
+      style="
+        padding: 10px;
+        font-size: 20px;
+        font-family: Arial, sans-serif;
+        text-align: left;
+        color: grey;
+        margin-left: 170px;
+      "
+    >
+      Enter details and enjoy!
+    </p>
+    <form class="registration-form" method="POST">
+      {% csrf_token %}
+      <div class="input-group">
+        <label for="username">Username</label>
+        <input
+          type="text"
+          id="username"
+          name="username"
+          placeholder="Username"
+          required
+        />
+      </div>
+      <div class="input-group">
+        <label for="email">Email</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="Email"
+          required
+        />
+      </div>
+      <div class="input-group">
+        <label for="pass1">Password</label>
+        <input
+          type="password"
+          id="pass1"
+          name="pass1"
+          placeholder="********"
+          required
+        />
+      </div>
+      <div class="input-group">
+        <label for="pass2">Confirm Password</label>
+        <input
+          type="password"
+          id="pass2"
+          name="pass2"
+          placeholder="********"
+          required
+        />
+      </div>
+      <div class="section">
+        <h4 style="margin-left: 70px">
+          Already have an account?
+          <a href="{% url 'signin' %}" style="margin-left: 10px">Login</a>
+        </h4>
+        <button type="submit" class="register-btn">Register</button>
+      </div>
+    </form>
+  </div>
+  
+  <hr />
+
+  <div class="right-side">
+    <img
+      src="{% static 'images/booksmith_logo2.png' %}"
+      alt="BookSmith Logo"
+      class="logo"
+    />
+  </div>
+</div>
+
+<div class="extra-space"></div>
+{% endblock %}
+
+{% block extra_js %}
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <script type="text/javascript" src="{% static 'js_files/signup.js' %}"></script>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      {% if messages %}
+        {% for message in messages %}
+          Swal.fire({
+            icon: '{% if message.tags == "success" %}success{% elif message.tags == "error" %}error{% else %}info{% endif %}',
+            title: '{{ message }}',
+            showConfirmButton: true,
+            timer: 3000
+          }).then(() => {
+            {% if message.tags == "success" %}
               window.location.href = "{% url 'signin' %}";
-          {% elif message.tags == "error" %}
-          {% endif %}
-      });
-  {% endfor %}
-  {% endif %}
-</script>
+            {% endif %}
+          });
+        {% endfor %}
+      {% endif %}
+    });
+  </script>
 {% endblock %}
