--- a/booksmith_proj/static/css_files/search_results.css
+++ b/booksmith_proj/static/css_files/search_results.css
@@ -1,5 +1,3 @@
-/* Recommended */
-
 .books-container {
   display: flex;
   justify-content: center;
@@ -27,15 +25,15 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.938);
   color: #fff;
   text-align: center;
-  padding: 10px;
+  padding: 20px;
   transition: background 0.3s;
 }
 
 .book-card:hover .book-info {
-  background: rgba(0, 0, 0, 0.8);
+  background: rgb(0, 0, 0);
 }
 
 .book-info h3 {
@@ -44,16 +42,32 @@
 }
 
 .book-info p {
+  display: inline;
   margin: 5px 0;
-  font-size: 14px;
-  color: #e63946;
+  padding: 5px 10px;
+  font-size: 18px;
+  font-weight: bolder;
+  color: #bd2000;
+}
+
+.book-info p s {
+  color: #727171;
+  font-size: 16px;
+  margin: 0 auto;
+}
+
+.book-info p {
+  margin: 0 auto;
+  font-size: 18px;
+  font-weight: bold;
+  color: #bd2000;
 }
 
 .book-info button {
-  background-color: #e63946;
+  background-color: #bd2000;
   color: #fff;
   border: none;
-  padding: 5px 10px;
+  padding: 15px 20px;
   border-radius: 5px;
   cursor: pointer;
   font-size: 14px;
