fix show password functionality

--- a/booksmith_proj/templates/accounts/signin.html
+++ b/booksmith_proj/templates/accounts/signin.html
@@ -30,7 +30,7 @@
           type="text"
           id="username"
           name="username"
-          placeholder="Enter your email"
+          placeholder="Enter your username"
           required
         />
       </div>
