--- a/booksmith_proj/templates/accounts/cart.html
+++ b/booksmith_proj/templates/accounts/cart.html
@@ -1,17 +1,101 @@
-{% extends 'base.html' %} {% block title %}My Cart Thinggggggggg{% endblock %}
-{% blockcontent %}
-<h1>Your Cart</h1>
+{% extends 'base.html' %}
+{% load static %}
 
-{% if cart_items %}
-<ul>
-  {% for item in cart_items %}
-  <li>{{ item.book.title }} - Price: ${{ item.book.price }}</li>
-  {% endfor %}
-</ul>
+{% block title %}My Cart{% endblock %}
 
-<h3>Total Price: ${{ total_price }}</h3>
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css_files/cart.css' %}" />
+{% endblock %}
 
-<a href="{% url 'checkout' %}" class="btn">Proceed to Checkout</a>
-{% else %}
-<p>Your cart is empty.</p>
-{% endif %} {% endblock %}
+{% block content %}
+<div class="center-block">
+    <h1>Your Shopping Cart</h1>
+    <div class="cart-container">
+        <div class="cart-items">
+            <div class="cart-header">
+                <h3>Item</h3>
+                <h3>Quantity</h3>
+                <h3>Price</h3>
+            </div>
+            {% if cart_items %}
+            <ul>
+                {% for item in cart_items %}
+                <li class="cart-item">
+                    <div class="item-details">
+                        <img src="{{ item.book.image_url }}" alt="{{ item.book.title }}" class="item-image">
+                        <div class="item-info">
+                            <span class="item-title">{{ item.book.title }}</span>
+                            <span class="item-author">{{ item.book.author }}</span>
+                        </div>
+                    </div>
+                    <span class="item-quantity">{{ item.quantity }}</span>
+                    <div class="item-actions">
+                        <span class="item-price">${{ item.book.price|floatformat:2 }}</span>
+                        <button class="btn-remove" onclick="removeFromCart({{ item.book.id }})">Remove</button>
+                    </div>
+                </li>
+                {% endfor %}
+            </ul>
+            {% else %}
+            <p>Your cart is empty.</p>
+            {% endif %}
+        </div>
+        <div class="order-summary">
+            <div class="order-header">
+              <h3>Order Summary</h3>  
+            </div>
+            <div class="summary-item">
+                <span>Subtotal</span>
+                <ul class="price-list">
+                    {% for item in cart_items %}
+                    <li>${{ item.book.price|floatformat:2 }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <hr>
+            <div class="summary-item">
+                <span>Order Total</span>
+                <span>${{ total_price|floatformat:2 }}</span>
+            </div>
+            <button class="btn checkout-btn">CHECKOUT</button>
+        </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    function addToCart(bookId) {
+        $.ajax({
+            url: "{% url 'add_to_cart' 0 %}".replace('0', bookId),
+            method: "POST",
+            headers: {
+                "X-CSRFToken": "{{ csrf_token }}"
+            },
+            success: function(response) {
+                alert('Item added to cart!');
+                location.reload();
+            },
+            error: function(xhr) {
+                alert('Error adding item to cart: ' + xhr.responseText);
+            }
+        });
+    }
+
+    function removeFromCart(bookId) {
+        $.ajax({
+            url: "{% url 'remove_from_cart' 0 %}".replace('0', bookId),
+            method: "POST",
+            headers: {
+                "X-CSRFToken": "{{ csrf_token }}"
+            },
+            success: function(response) {
+                alert('Item removed from cart!');
+                location.reload();
+            },
+            error: function(xhr) {
+                alert('Error removing item from cart: ' + xhr.responseText);
+            }
+        });
+    }
+</script>
+{% endblock %}
